--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ minecraft {
 
             property 'forge.logging.markers', 'REGISTRIES'
 
-            property 'fml.coreMods.load', 'me.gerald.dallas.asm.MixinLoader'
+            property 'fml.coreMods.load', 'me.gerald.dallas.mixin.MixinLoader'
 
             property 'forge.logging.console.level', 'debug'
 
@@ -91,10 +91,10 @@ jar {
     manifest.attributes(
             'Manifest-Version': 1.0,
             'MixinConfigs': 'mixins.dallas.json',
-            'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
+            'TweakClass': 'org.spongepowered.mixin.launch.MixinTweaker',
             'TweakOrder': 0,
             'FMLCorePluginContainsFMLMod': 'true',
-            'FMLCorePlugin': 'me.gerald.dallas.asm.MixinLoader',
+            'FMLCorePlugin': 'me.gerald.dallas.mixin.MixinLoader',
             'ForceLoadAsMod': 'true',
     )
     from {
