--- a/build.gradle
+++ b/build.gradle
@@ -61,9 +61,18 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
+    mavenCentral()
     maven {
         name = 'SpongePowered'
         url = 'https://repo.spongepowered.org/repository/maven-public/'
+    }
+    maven {
+        name = 'impactdevelopment-repo'
+        url = 'https://impactdevelopment.github.io/maven/'
+    }
+    maven {
+        name = "jitpack.io"
+        url = "https://jitpack.io"
     }
 }
 
@@ -86,12 +95,16 @@ dependencies {
     shadow('club.minnced:java-discord-rpc:2.0.2') {
         exclude module: 'jna'
     }
-    implementation configurations.shadow
 
     implementation('se.michaelthelin.spotify:spotify-web-api-java:6.5.4') {
         exclude module: 'commons-codec'
         exclude module: 'commons-logging'
     }
+
+    implementation('com.github.cabaletta:baritone:1.2.14')
+    shadow('cabaletta:baritone-api:1.2')
+
+    implementation configurations.shadow
 }
 
 mixin {
